<resources>
    <string name="app_name">VideoClub</string>
    <string name="usuario">Usuario:</string>
    <string name="nombre">Nombre:</string>
    <string name="contrasegna">Contraseña:</string>
    <string name="introducir_contrasegna">Introducir Contraseña</string>
    <string name="introducir_nombre">Introducir Nombre</string>
    <string name="repetir_contrasegna">Confirmar Contraseña</string>
    <string name="repetir_contrasena">Confirmar Contraseña:</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="nacionalidad">Nacionalidad:</string>
    <string name="sexo">Sexo:</string>
    <string name="aficiones">Aficiones:</string>
    <string name="cv_resumido">CV resumido:</string>
    <string name="resumen">Resumen</string>
    <string name="cine">Cine</string>
    <string name="deporte">Deporte</string>
    <string name="m_sica">Música</string>
    <string name="naturaleza">Naturaleza</string>
    <string name="cancelar">TODO</string>
    <string name="login">Ingresar</string>
    <string name="register">Registrarse</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="introducir_email">Introducir email</string>
    <string name="mail">Email:</string>
    <string name="home">Home</string>
    <string name="infotrailer">InfoTrailer</string>
    <string name="titulo">Titulo</string>
    <string name="click_en_la_imagen_para_ver_el_trailer">Click en la imagen para ver el trailer</string>
    <string name="linktrailer">linkTrailer</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="poster">Poster</string>
    <string name="prueba">Prueba</string>
    <string name="unirse">Unirse</string>
    <string-array name="Nacionalidad">
        <item>Brasil</item>
        <item>España</item>
        <item>Portugal</item>
        <item>Perú</item>
        <item>Ecuador</item>
        <item>Argentina</item>
    </string-array>
</resources>